new Date()활용해서 현재 월 구현

--- a/calendar.html
+++ b/calendar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./calendar.css">
-    <script src="./calendar.js"></script>
+    <script defer src="./calendar.js"></script>
     <title>Calendar-Sample</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="calendar-wrapper">
             <div class="calendar-header">
                 <button class="prev">prev</button>
-                <div class="currentMonth"></div>
+                <h2 class="currentMonth"></h2>
                 <button class="next">next</button>
             </div>
             <ul class="calendar-days">
